// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test btpNetwork GET /btpnetwork 1`] = `
Object {
  "bondedValue": Any<Number>,
  "fee": Any<Object>,
  "minted": Any<Array>,
  "totalNetworks": Any<Number>,
  "totalTransactions": Any<Number>,
  "volume": Any<Number>,
}
`;

exports[`Test btpNetwork GET /btpnetwork 2`] = `
Object {
  "mintedVolume": Any<Number>,
  "networkId": Any<String>,
  "networkName": Any<String>,
}
`;

exports[`Test btpNetwork GET /btpnetwork 3`] = `
Object {
  "mintedVolume": Any<Number>,
  "networkId": Any<String>,
  "networkName": Any<String>,
}
`;

exports[`Test btpNetwork GET /btpnetwork 4`] = `
Object {
  "mintedVolume": Any<Number>,
  "networkId": Any<String>,
  "networkName": Any<String>,
}
`;

exports[`Test btpNetwork GET /btpnetwork 5`] = `
Object {
  "mintedVolume": Any<Number>,
  "networkId": Any<String>,
  "networkName": Any<String>,
}
`;

exports[`Test btpNetwork GET /btpnetwork/converter?token=btc&amount=100&convert_to=usd  1`] = `
Object {
  "bondedValue": Any<Number>,
  "fee": Object {
    "allTimeAmount": Any<Array>,
    "assets": Any<Array>,
    "cumulativeAmount": Any<Number>,
    "currentAmount": Any<Number>,
  },
  "minted": Any<Array>,
  "totalNetworks": Any<Number>,
  "totalTransactions": Any<Number>,
  "volume": Any<Number>,
}
`;

exports[`Test btpNetwork GET /btpnetwork/converter?token=btc&amount=100&convert_to=usd  2`] = `
Object {
  "mintedVolume": Any<Number>,
  "networkId": Any<String>,
  "networkName": Any<String>,
}
`;

exports[`Test btpNetwork GET /btpnetwork/converter?token=btc&amount=100&convert_to=usd  3`] = `
Object {
  "mintedVolume": Any<Number>,
  "networkId": Any<String>,
  "networkName": Any<String>,
}
`;

exports[`Test btpNetwork GET /btpnetwork/converter?token=btc&amount=100&convert_to=usd  4`] = `
Object {
  "mintedVolume": Any<Number>,
  "networkId": Any<String>,
  "networkName": Any<String>,
}
`;

exports[`Test btpNetwork GET /btpnetwork/converter?token=btc&amount=100&convert_to=usd  5`] = `
Object {
  "mintedVolume": Any<Number>,
  "networkId": Any<String>,
  "networkName": Any<String>,
}
`;

exports[`Test btpNetwork GET /btpnetwork?stats=1 1`] = `
Object {
  "bondedValue": Any<Number>,
  "fee": Object {
    "allTimeAmount": Any<Array>,
    "assets": Any<Array>,
    "cumulativeAmount": Any<Number>,
    "currentAmount": Any<Number>,
  },
  "minted": Any<Array>,
  "stats": Any<Object>,
  "totalNetworks": Any<Number>,
  "totalTransactions": Any<Number>,
  "volume": Any<Number>,
}
`;

exports[`Test btpNetwork GET /btpnetwork?stats=1 2`] = `
Object {
  "mintedVolume": Any<Number>,
  "networkId": Any<String>,
  "networkName": Any<String>,
}
`;

exports[`Test btpNetwork GET /btpnetwork?stats=1 3`] = `
Object {
  "mintedVolume": Any<Number>,
  "networkId": Any<String>,
  "networkName": Any<String>,
}
`;

exports[`Test btpNetwork GET /btpnetwork?stats=1 4`] = `
Object {
  "mintedVolume": Any<Number>,
  "networkId": Any<String>,
  "networkName": Any<String>,
}
`;

exports[`Test btpNetwork GET /btpnetwork?stats=1 5`] = `
Object {
  "mintedVolume": Any<Number>,
  "networkId": Any<String>,
  "networkName": Any<String>,
}
`;

exports[`Test btpNetwork GET /btpnetwork?stats=1 6`] = `
Object {
  "block_height": Any<Number>,
  "name": Any<String>,
  "network_id": Any<String>,
  "updated_time": Any<String>,
}
`;

exports[`Test btpNetwork GET /btpnetwork?stats=1 7`] = `
Object {
  "block_height": Any<Number>,
  "name": Any<String>,
  "network_id": Any<String>,
  "updated_time": Any<String>,
}
`;

exports[`Test btpNetwork GET /btpnetwork?stats=1 8`] = `
Object {
  "block_height": Any<Number>,
  "name": Any<String>,
  "network_id": Any<String>,
  "updated_time": Any<String>,
}
`;

exports[`Test btpNetwork GET /btpnetwork?volumeLast24h=true&mintLast24h=true 1`] = `
Object {
  "bondedValue": Any<Number>,
  "fee": Object {
    "allTimeAmount": Any<Array>,
    "assets": Any<Array>,
    "cumulativeAmount": Any<Number>,
    "currentAmount": Any<Number>,
  },
  "mintVolumeLast24hChange": Any<Number>,
  "minted": Any<Array>,
  "totalNetworks": Any<Number>,
  "totalTransactions": Any<Number>,
  "volume": Any<Number>,
  "volumeLast24hChange": Any<Number>,
}
`;

exports[`Test btpNetwork GET /btpnetwork?volumeLast24h=true&mintLast24h=true 2`] = `
Object {
  "mintedVolume": Any<Number>,
  "networkId": Any<String>,
  "networkName": Any<String>,
}
`;

exports[`Test btpNetwork GET /btpnetwork?volumeLast24h=true&mintLast24h=true 3`] = `
Object {
  "mintedVolume": Any<Number>,
  "networkId": Any<String>,
  "networkName": Any<String>,
}
`;

exports[`Test btpNetwork GET /btpnetwork?volumeLast24h=true&mintLast24h=true 4`] = `
Object {
  "mintedVolume": Any<Number>,
  "networkId": Any<String>,
  "networkName": Any<String>,
}
`;

exports[`Test btpNetwork GET /btpnetwork?volumeLast24h=true&mintLast24h=true 5`] = `
Object {
  "mintedVolume": Any<Number>,
  "networkId": Any<String>,
  "networkName": Any<String>,
}
`;
